--- a/portfolio.html
+++ b/portfolio.html
@@ -78,184 +78,202 @@
           <ul class="projects list">
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/tehnoopti.jpg"
-                  class="projects-image"
-                  alt="технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/tehnoopti.jpg"
+                    class="projects-image"
+                    alt="технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Технокряк</h2>
                   <p class="projects-type">Веб-сайт</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/new-orleanopti.jpg"
-                  class="projects-image"
-                  alt="постер Нью Орлеан"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/new-orleanopti.jpg"
+                    class="projects-image"
+                    alt="постер Нью Орлеан"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="projects-type">Дизайн</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/seafoodopti.jpg"
-                  class="projects-image"
-                  alt="ресторан морепродукты"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/seafoodopti.jpg"
+                    class="projects-image"
+                    alt="ресторан морепродукты"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Ресторан Seafood</h2>
                   <p class="projects-type">Приложение</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/headphonesopti.jpg"
-                  class="projects-image"
-                  alt="проект Прайм"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/headphonesopti.jpg"
+                    class="projects-image"
+                    alt="проект Прайм"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Проект Prime</h2>
                   <p class="projects-type">Маркетинг</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/boxesopti.jpg"
-                  class="projects-image"
-                  alt="проект коробки"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/boxesopti.jpg"
+                    class="projects-image"
+                    alt="проект коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Проект Boxes</h2>
                   <p class="projects-type">Приложение</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/inspiration-has-no-bordersopti.jpg"
-                  class="projects-image"
-                  alt="Вдохновение не имеет границ"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/inspiration-has-no-bordersopti.jpg"
+                    class="projects-image"
+                    alt="Вдохновение не имеет границ"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Inspiration has no Borders</h2>
                   <p class="projects-type">Веб-сайт</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/limited-editionopti.jpg"
-                  class="progects-image"
-                  alt=" издание ограниченный выпуск"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/limited-editionopti.jpg"
+                    class="progects-image"
+                    alt=" издание ограниченный выпуск"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Издание Limited Edition</h2>
                   <p class="projects-type">Дизайн</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/labopti.jpg"
-                  class="projects-image"
-                  alt="проект ЛАБ"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/labopti.jpg"
+                    class="projects-image"
+                    alt="проект ЛАБ"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Проект LAB</h2>
                   <p class="projects-type">Маркетинг</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <li class="projects-item">
               <a href="">
-                <img
-                  src="./images/growing-businessopti.jpg"
-                  class="projects-image"
-                  alt="Растущий бизнес"
-                  width="370"
-                  height="294"
-                />
+                <div>
+                  <img
+                    src="./images/growing-businessopti.jpg"
+                    class="projects-image"
+                    alt="Растущий бизнес"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="projects-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="projects-works">
                   <h2 class="projects-title">Growing Business</h2>
                   <p class="projects-type">Приложение</p>
                 </div>
-                <p class="projects-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
           </ul>
@@ -272,8 +290,8 @@
             <span class="address-kiev"
               >г. Киев, Бульвар Леси Украинки, д. 26</span
             ><br />
-            <a href="info@devstudio.com" class="footer-contacts"
-              >info@devstudio.com</a
+            <a href="mailto:info@example.com" class="footer-contacts"
+              >info@example.com</a
             ><br />
             <a href="tel:+380961111111" class="footer-contacts"
               >+38 096 111 11 11</a
