--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
           <h1 class="hero-title">
             Эффективные решения для вашего бизнеса
           </h1>
+          <button class="button">Заказать услугу</button>
         </div>
-        <a href="" class="button">Заказать услугу</a>
       </section>
       <!-- наши преимущества -->
       <section class="advantages section">
         <div class="container">
-          <h2 class="our-advantages">Наши преимущества</h2>
+          <h2 class="hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-item icon-antenna">
               <div class="advantages-icon">
