--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1>портфолио</h1>
+          <h1 class="hidden">портфолио</h1>
           <!-- кнопки -->
           <ul class="buttons list">
             <li class="buttons-item">
